# pd-helper

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
pd_helper/: __init__.py  helper.py
pd_helper/utils/: __init__.py  _mem_usage.py  _parse_cols.py  _reduce_precision.py
src/: __init__.py
src/pd_helper/: __init__.py  helper.py  maker.py
src/pd_helper/tests/: test__config.py  test__mem_usage.py  test__parse_cols.py  test__reduce_precision.py  test_helper.py  test_maker.py
src/pd_helper/utils/: __init__.py  _configuration.py  _mem_usage.py  _parse_cols.py  _reduce_precision.py
