[metadata]
# replace with your username:
name = pd_helper
version = 0.0.1
author = Justin Chae
author_email = justin@chaemail.com
description = A helpful script to optimize a Pandas DataFrame.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/justinhchae/pd-helper
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.8',

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src